[gd_scene load_steps=5 format=3 uid="uid://crkgfai5afxrd"]

[ext_resource type="Script" path="res://chat.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cbnjlc156mw38" path="res://settings.tscn" id="2_5o6jm"]
[ext_resource type="AudioStream" uid="uid://bsd66tdopu7fd" path="res://max-verstappen.mp3" id="3_3v81b"]
[ext_resource type="AudioStream" uid="uid://nbtfuxxp85a4" path="res://—á–∞–π –ø–æ—Å—Ç–∞–≤—å—Ç–µ.mp3" id="4_4yh8y"]

[node name="Chat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Settings" parent="." instance=ExtResource("2_5o6jm")]

[node name="SettingsButton" type="Button" parent="Settings"]
offset_left = 1185.0
offset_top = 19.0
offset_right = 1259.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 30
text = "üè¢üè¢"

[node name="SettingsPopup" type="PopupPanel" parent="Settings"]
initial_position = 2
size = Vector2i(960, 540)

[node name="ScrollContainer" type="ScrollContainer" parent="Settings/SettingsPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 956.0
offset_bottom = 536.0
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Settings/SettingsPopup/ScrollContainer"]
layout_mode = 2
columns = 2

[node name="BackgroundColorLabel" type="Label" parent="Settings/SettingsPopup/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Background Color"

[node name="BackgroundColorPicker" type="ColorPickerButton" parent="Settings/SettingsPopup/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Color"
color = Color(0, 0, 1, 1)
edit_alpha = false

[node name="BackgroundImageLabel" type="Label" parent="Settings/SettingsPopup/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Background Image   "

[node name="BackgroundImagePicker" type="Button" parent="Settings/SettingsPopup/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="BackgroundImagePicker" type="FileDialog" parent="Settings/SettingsPopup/ScrollContainer/GridContainer/BackgroundImagePicker"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="TextUsernameColorLabel" type="Label" parent="Settings/SettingsPopup/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Username Color"

[node name="TextUsernameColorPicker" type="ColorPickerButton" parent="Settings/SettingsPopup/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Color"
color = Color(0, 1, 0, 1)
edit_alpha = false

[node name="TextMessageColorLabel2" type="Label" parent="Settings/SettingsPopup/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Message Color"

[node name="TextMessageColorPicker" type="ColorPickerButton" parent="Settings/SettingsPopup/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Color"
color = Color(1, 1, 0, 1)
edit_alpha = false

[node name="Background" type="Control" parent="."]
anchors_preset = 0

[node name="BackgroundColor" type="ColorRect" parent="Background"]
z_index = -2
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 1, 1)

[node name="BackgroundTexture" type="TextureRect" parent="Background"]
z_index = -1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BackupTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="UsernameDialog" type="PopupPanel" parent="."]
initial_position = 1
size = Vector2i(640, 360)
always_on_top = true

[node name="VBoxContainer" type="VBoxContainer" parent="UsernameDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UsernameDialog/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 40

[node name="Prompt" type="Label" parent="UsernameDialog/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 60
text = "–ö–ê–ö –¢–ï–ë–Ø –ó–û–í–£–¢???
???????????"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="UsernameDialog/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_right = 160

[node name="LineEdit" type="LineEdit" parent="UsernameDialog/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
placeholder_text = "Markinim"
alignment = 1

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SetUsernameButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 19.0
offset_top = 644.0
offset_right = 226.0
offset_bottom = 703.0
text = "–ü–æ—Å—Ç–∞–≤–∏—Ç—å —é–∑–µ—Ä–Ω–µ–π–º..."

[node name="TextField" type="LineEdit" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 251.0
offset_top = 644.0
offset_right = 1171.0
offset_bottom = 703.0

[node name="SendButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1188.0
offset_top = 644.0
offset_right = 1262.0
offset_bottom = 704.0
theme_override_font_sizes/font_size = 30
text = "‚úàÔ∏è"

[node name="Scrollable" type="ScrollContainer" parent="."]
layout_mode = 0
offset_right = 1160.0
offset_bottom = 620.0
horizontal_scroll_mode = 0

[node name="MessageList" type="VBoxContainer" parent="Scrollable"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Blastilka" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3v81b")

[node name="ScrollDownButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1188.0
offset_top = 570.0
offset_right = 1262.0
offset_bottom = 630.0
theme_override_font_sizes/font_size = 30
text = "üëéüèø"

[node name="ChayPostavte" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_4yh8y")

[connection signal="settings_applied" from="." to="." method="on_settings_applied"]
[connection signal="pressed" from="Settings/SettingsButton" to="Settings" method="open_settings"]
[connection signal="popup_hide" from="Settings/SettingsPopup" to="." method="_on_settings_popup_popup_hide"]
[connection signal="color_changed" from="Settings/SettingsPopup/ScrollContainer/GridContainer/BackgroundColorPicker" to="Settings" method="_on_background_color_picker_color_changed"]
[connection signal="pressed" from="Settings/SettingsPopup/ScrollContainer/GridContainer/BackgroundImagePicker" to="Settings" method="_on_background_image_picker_pressed"]
[connection signal="file_selected" from="Settings/SettingsPopup/ScrollContainer/GridContainer/BackgroundImagePicker/BackgroundImagePicker" to="Settings" method="_on_background_image_picker_file_selected"]
[connection signal="color_changed" from="Settings/SettingsPopup/ScrollContainer/GridContainer/TextUsernameColorPicker" to="Settings" method="_on_text_username_color_picker_color_changed"]
[connection signal="color_changed" from="Settings/SettingsPopup/ScrollContainer/GridContainer/TextMessageColorPicker" to="Settings" method="_on_text_message_color_picker_color_changed"]
[connection signal="timeout" from="BackupTimer" to="." method="_on_timer_timeout"]
[connection signal="text_submitted" from="UsernameDialog/VBoxContainer/MarginContainer2/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Control/SetUsernameButton" to="." method="_on_set_username_button_pressed"]
[connection signal="text_submitted" from="Control/TextField" to="." method="_on_text_field_text_submitted"]
[connection signal="pressed" from="Control/SendButton" to="." method="send_message"]
[connection signal="pressed" from="ScrollDownButton" to="." method="_on_scroll_down_button_pressed"]
